# pyrolog

./: .gitignore  .readthedocs.yaml  README.md  extend_version.bat  extend_version.sh  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
docs/source/features/: example.rst
docs/source/quickguide/: firststeps.rst  parent_groups.rst
docs/source/reference/: pyrolog_module.rst
examples/: presentation.py
pyrolog/: __init__.py  _types.py  colors.py  defaults.py  empty_colors.py  formatters.py  group.py  handlers.py  logger.py  logging_context.py  utils.py  version.py
utils/: extend_version.py
utils/templates/: pyproject.toml  pyrolog_version.py  setup.cfg
