[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrolog"
version = "2.3.0"
description = "Pretty modern colored logging library"
readme = "README.md"
authors = [{ name = "ftdot", email = "ftdoot@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Plugins",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation :: Sphinx",
    "Topic :: System :: Logging",
]
keywords = ["journal", "colored", "modern", "pretty", "color", "library", "logging", "logger", "logs"]
dependencies = [
    "colorama",
]
requires-python = ">=3.9"

[project.optional-dependencies]
docs = ["sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/ftdot/pyrolog"
# Documentation = "https://pyrolog.readthedocs.io/"
